--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@
 # These are test/development credentials only - NOT for production
 
 # Database Configuration
-DB_HOST=database
+DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=saas_db
 DB_USER=postgres
@@ -16,8 +16,8 @@ JWT_EXPIRES_IN=24h
 PORT=5000
 NODE_ENV=development
 
-# Frontend URL (for CORS) - Use service name in Docker
-FRONTEND_URL=http://frontend:3000
+# Frontend URL (for CORS) - Use localhost for local development
+FRONTEND_URL=http://localhost:3000
 
 # Logging
 LOG_LEVEL=info
