--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,11 +2,15 @@
 # Copy this file to .env and fill in your values
 
 # Database Configuration
+# For Render/managed Postgres you can set only DATABASE_URL.
+# Local/dev can keep using DB_HOST/DB_PORT/DB_NAME/DB_USER/DB_PASSWORD.
+DATABASE_URL=
 DB_HOST=database
 DB_PORT=5432
 DB_NAME=saas_db
 DB_USER=postgres
 DB_PASSWORD=postgres
+DB_SSL=true
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key_must_be_at_least_32_characters_long_for_security
@@ -16,7 +20,7 @@ JWT_EXPIRES_IN=24h
 PORT=5000
 NODE_ENV=development
 
-# Frontend URL (for CORS)
+# Allowed frontend origin for CORS
 FRONTEND_URL=http://frontend:3000
 
 # Logging
